# PDC-Project

./: 22i-1165_22i-1068_CS-C.docx  CMakeLists.txt  analyze_all.sh
build-gprof/: CMakeCache.txt  Makefile  cmake_install.cmake  gmon_100k_Th1.out  gmon_100k_Th4.out  gmon_10k_Th1.out  gmon_10k_Th4.out  gmon_full_Th1.out  gmon_full_Th4.out  profile_100k_Th1.txt  profile_100k_Th4.txt  profile_10k_Th1.txt  profile_10k_Th4.txt  profile_full_Th1.txt  profile_full_Th4.txt  psaiim
build-valgrind/: CMakeCache.txt  Makefile  cmake_install.cmake  psaiim
data/: P.py  int.csv  interests.csv  interests2.csv  out2.edgelist  sample.edgelist  sample10k.edgelist  sample_.edgelist
data/higgs/: 1.py  2.py  3.py  4.py  5.py  L.py  higgs_mapped_map.txt
serial_version/: CMakeLists.txt
serial_version/src/: GraphLoader.cpp  GraphLoader.h  Influence.cpp  Influence.h  Partitioner.cpp  Partitioner.h  SeedSelector.cpp  SeedSelector.h  main.cpp
src/: 1  CMakeCache.txt  GraphLoader.cpp  GraphLoader.h  Influence.cpp  Influence.h  Makefile  Partitioner.cpp  Partitioner.h  SeedSelector.cpp  SeedSelector.h  cmake_install.cmake  influence  influence_serial.cpp  influence_serial.h  main.cpp  seq  serial.cpp  utils.h
